--- a/tts.css
+++ b/tts.css
@@ -6,11 +6,20 @@ body{
 .container{
   margin-left: auto;
   margin-right: auto;
-  width: 1000px;
+  width: 1300px;
 }
 
 .top-left-content{
-  width: 500px;
+  width: 420px;
+  margin-top: 6%;
+  margin-left: 5%;
+}
+
+.top-right-content{
+  width: 800px;
+  position: absolute;
+  top: 0px;
+  left: 40%;
 }
 
 .top-left-content h1,
@@ -27,5 +36,24 @@ body{
 .top-left-content h2{
   font-weight: 400;
   font-size: 16px;
-  margin-bottom: 0px;
+  margin-bottom: 10px;
+}
+
+.top-right-content img{
+  width: 800px;
+}
+
+input[type=text]{
+  border: 1px solid transparent;
+  border-top: none;
+  border-bottom: 1px solid #DDD;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px #FFF, 0 1px 0 #FFF;
+  border-radius: 8px;
+  height: 20px;
+  margin-bottom: 10px;
+  padding-left: 5px;
+}
+
+.two-column{
+  width: 195px;
 }
