--- a/tts.css
+++ b/tts.css
@@ -3,22 +3,53 @@ body{
   font-family: arial;
 }
 
+/* Container for all content */
+
 .container{
   margin-left: auto;
   margin-right: auto;
   width: 1300px;
+  z-index: 2;
+  position: relative;
 }
+
+/* Backgrounds */
+
+.orangebg{
+  position: fixed;
+  top: 280px;
+  left: 0px;
+  z-index: 1;
+}
+
+/* Navigation */
+.float-left{
+  float: left;
+  padding-left: 20px;
+}
+
+.nav{
+  height: 30px;
+  color: #FF7500;
+  font-size: 16px;
+  margin-top: 20px;
+  font-weight: bold;
+  align-items: right;
+  margin-left: 65%;
+}
+
+/* Intro section */
 
 .top-left-content{
   width: 420px;
-  margin-top: 6%;
+  margin-top: 3%;
   margin-left: 5%;
 }
 
 .top-right-content{
   width: 800px;
   position: absolute;
-  top: 0px;
+  top: 60px;
   left: 40%;
 }
 
@@ -43,17 +74,38 @@ body{
   width: 800px;
 }
 
+.top-left-content img{
+  width: 50px;
+}
+
+/* Styling first form */
+
+input[type=text],
+input[type=submit]{
+  height: 25px;
+  border-radius: 8px;
+}
+
 input[type=text]{
   border: 1px solid transparent;
   border-top: none;
   border-bottom: 1px solid #DDD;
   box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px #FFF, 0 1px 0 #FFF;
-  border-radius: 8px;
-  height: 20px;
   margin-bottom: 10px;
   padding-left: 5px;
 }
 
 .two-column{
   width: 195px;
+}
+
+.one-column{
+  width: 400px;
+}
+
+input[type=submit]{
+  border: none;
+  width: 410px;
+  background-color: #FFD9B8;
+  font-weight: bold;
 }
