--- a/tts.css
+++ b/tts.css
@@ -33,6 +33,9 @@ body{
 
 .float-left{
   float: left;
+}
+
+.nav .float-left{
   padding-left: 20px;
 }
 
@@ -133,6 +136,7 @@ input[type=submit]{
   height: 250px;
   border-radius: 50%;
   display: block;
+  padding-left: 20px;
 }
 
 #circle1{
@@ -206,4 +210,61 @@ input[type=submit]{
 
 .van img{
   width: 600px;
+}
+
+/* Tile intro */
+
+.tile-intro{
+  width: 913px;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  color: white;
+  padding-left: 2%;
+}
+
+.tile-intro h3{
+  font-size: 30px;
+  margin-bottom: 0px;
+}
+
+.tile-intro p{
+  margin-top: 5px;
+}
+
+/* Product tiles */
+
+.tiles{
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  width: 913px;
+  margin-top: 3%;
+}
+
+.tiles h4{
+  margin-bottom: 0px;
+}
+
+.tiles p{
+  margin-top: 5px;
+}
+
+.tiles .cta{
+  color: #FF7500;
+  font-weight: bold;
+}
+
+.tile{
+  width: 190px;
+  height: 300px;
+  background-color: #f7f7f7;
+  margin-left: 2%;
+  border-radius: 3%;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.tile img{
+  height: 112px;
 }
