--- a/tts.css
+++ b/tts.css
@@ -4,36 +4,46 @@ body{
 }
 
 /* Container for all content */
-
 .container{
-  margin-left: auto;
-  margin-right: auto;
   width: 1300px;
   z-index: 2;
   position: relative;
 }
 
-/* Backgrounds */
+/* Popular styles */
 
-.orangebg{
-  position: absolute;
-  top: 280px;
-  left: 0px;
-  z-index: 1;
+.container,
+.map,
+.tour-dates,
+.tile-intro,
+.tiles,
+.bottom-form {
+  margin-left: auto;
+  margin-right: auto;
 }
-
-.orangebg-2{
-  position: absolute;
-  top: 1930px;
-  left:0px;
-  z-index: 1;
-}
-
-/* Navigation */
 
 .float-left{
   float: left;
 }
+
+/* Backgrounds */
+
+.orangebg,
+.orangebg-2{
+  position: absolute;
+  left: 0;
+  z-index: 1;
+}
+
+.orangebg{
+  top: 280px;
+}
+
+.orangebg-2{
+  top: 1930px;
+}
+
+/* Navigation */
 
 .nav .float-left{
   padding-left: 20px;
@@ -90,21 +100,32 @@ body{
   width: 50px;
 }
 
-/* Styling first form */
+/* Styling forms */
 
 .top-left-content input[type=text],
 .top-left-content input[type=submit]{
-  height: 25px;
   border-radius: 8px;
 }
 
-.top-left-content input[type=text]{
+input[type=text]{
   border: 1px solid transparent;
   border-top: none;
   border-bottom: 1px solid #DDD;
   box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px #FFF, 0 1px 0 #FFF;
   margin-bottom: 10px;
   padding-left: 5px;
+}
+
+input[type=submit]{
+  border: none;
+  font-weight: bold;
+}
+
+/* First form */
+
+.top-left-content input[type=text],
+.top-left-content input[type=submit]{
+  height: 25px;
 }
 
 .top-left-content .two-column{
@@ -116,11 +137,30 @@ body{
 }
 
 .top-left-content input[type=submit]{
-  border: none;
   width: 410px;
   background-color: #FFD9B8;
-  font-weight: bold;
 }
+
+/* Second form */
+
+.bottom-form input[type=text],
+.bottom-form input[type=submit]{
+  height: 30px;
+}
+
+.bottom-form .two-column{
+  width: 420px;
+}
+
+.bottom-form .one-column{
+  width: 850px;
+}
+
+.bottom-form input[type=submit]{
+  width: 860px;
+  background-color: #FFB16F
+}
+
 
 /* Video styling */
 
@@ -175,8 +215,6 @@ body{
 .map{
   background-color: #F7F7F7;
   width: 700px;
-  margin-left: auto;
-  margin-right: auto;
   position: relative;
   height: 700px;
   margin-top: 40%;
@@ -207,8 +245,6 @@ body{
 
 .tour-dates{
   text-align: left;
-  margin-left: auto;
-  margin-right: auto;
   font-size: 18px;
 }
 
@@ -235,8 +271,6 @@ body{
 .tile-intro{
   width: 875px;
   position: relative;
-  margin-left: auto;
-  margin-right: auto;
   color: white;
 }
 
@@ -252,8 +286,6 @@ body{
 /* Product tiles */
 
 .tiles{
-  margin-left: auto;
-  margin-right: auto;
   position: relative;
   width: 913px;
   margin-top: 3%;
@@ -292,8 +324,6 @@ body{
 
 .bottom-form{
   width: 875px;
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 40%;
   margin-bottom: 5%;
 }
@@ -307,38 +337,6 @@ body{
 .bottom-form p{
   margin-top: 5px;
   color: #2B2B2B;
-}
-
-/* Styling bottom form */
-
-.bottom-form input[type=text],
-.bottom-form input[type=submit]{
-  height: 30px;
-  border-radius: 8px;
-}
-
-.bottom-form input[type=text]{
-  border: 1px solid transparent;
-  border-top: none;
-  border-bottom: 1px solid #DDD;
-  box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px #FFF, 0 1px 0 #FFF;
-  margin-bottom: 10px;
-  padding-left: 5px;
-}
-
-.bottom-form .two-column{
-  width: 420px;
-}
-
-.bottom-form .one-column{
-  width: 850px;
-}
-
-.bottom-form input[type=submit]{
-  border: none;
-  width: 860px;
-  background-color: #FFB16F;
-  font-weight: bold;
 }
 
 /* Reponsive styling */
