--- a/tts.css
+++ b/tts.css
@@ -341,3 +341,79 @@ input[type=submit]{
   margin-top: 5px;
   color: #2B2B2B;
 }
+
+@media only screen and (max-width: 480px){
+
+  /* Background */
+  .orangebg,
+  .orangebg-2{
+    height: 400px;
+  }
+
+  .orangebg{
+    margin-top: 20%;
+  }
+
+  /* Popular styles */
+  .container{
+    width: 480px;
+  }
+
+  /* Navigation */
+
+  .nav .float-left{
+    padding-left: 20px;
+  }
+
+  .nav{
+    height: 30px;
+    color: #FF7500;
+    font-size: 16px;
+    margin-top: 20px;
+    font-weight: bold;
+    align-items: right;
+    margin-left: 20%;
+  }
+
+  /* Intro section */
+
+  .top-right-content img{
+    content: url('https://ryanleys.com/igus-tests/tts/img/box_small.png');
+    width: 270px;
+    margin-top: -30px;
+    z-index: 1;
+  }
+
+  .top-right-content{
+    z-index: 1;
+  }
+
+  .top-left-content{
+    width: 344px;
+    position: relative;
+    z-index: 99;
+    margin-left: 1%;
+  }
+
+  /* Styling forms */
+
+  /* First form */
+
+  .top-left-content input[type=text],
+  .top-left-content input[type=submit]{
+    height: 25px;
+  }
+
+  .top-left-content .two-column{
+    width: 430px;
+  }
+
+  .top-left-content .one-column{
+    width: 430px;
+  }
+
+  .top-left-content input[type=submit]{
+    width: 440px;
+    background-color: #FFD9B8;
+  }
+}
