--- a/tts.css
+++ b/tts.css
@@ -1,58 +1,49 @@
-body{
+body {
   background-color: #F7F7F7;
   font-family: arial;
 }
 
 /* Container for all content */
-.container{
+.container {
   width: 1300px;
   z-index: 2;
   position: relative;
 }
 
 /* Popular styles */
-
-.container,
-.map,
-.tour-dates,
-.tile-intro,
-.tiles,
-.bottom-form {
+.container, .map, .tour-dates, .tile-intro, .tiles, .bottom-form {
   margin-left: auto;
   margin-right: auto;
 }
 
-.float-left{
+.float-left {
   float: left;
 }
 
 /* Backgrounds */
-
-.orangebg,
-.orangebg-2{
+.orangebg, .orangebg-2 {
   position: absolute;
   left: 0;
   z-index: 1;
   width: 100%;
 }
 
-.orangebg{
+.orangebg {
   top: 280px;
   width: 100%;
 }
 
-.orangebg-2{
+.orangebg-2 {
   top: 1930px;
   width: 100%;
 }
 
 /* Navigation */
-
-.nav .float-left{
+.nav .float-left {
   padding-left: 20px;
 }
 
-.nav{
+.nav {
   height: 30px;
   color: #FF7500;
   font-size: 16px;
@@ -63,118 +54,107 @@ body{
 }
 
 /* Intro section */
-
-.top-left-content{
+.top-left-content {
   width: 420px;
   margin-top: 3%;
   margin-left: 5%;
 }
 
-.top-right-content{
+.top-right-content {
   width: 800px;
   position: absolute;
   top: 60px;
   left: 40%;
 }
 
-.top-left-content h1,
-.top-left-content h2{
+.top-left-content h1, .top-left-content h2 {
   margin-top: 0px;
   color: #2B2B2B;
 }
 
-.top-left-content h1{
+.top-left-content h1 {
   font-size: 40px;
   line-height: 1em;
   margin-bottom: 8px;
 }
 
-.top-left-content h2{
+.top-left-content h2 {
   font-weight: 400;
   font-size: 16px;
   margin-bottom: 10px;
 }
 
-.top-right-content img{
+.top-right-content img {
   width: 800px;
 }
 
-.top-left-content img{
+.top-left-content img {
   width: 50px;
 }
 
 /* Styling forms */
-
-input[type=text],
-input[type=submit]{
+input[type=text], input[type=submit] {
   border-radius: 8px;
 }
 
-input[type=text]{
+input[type=text] {
   border: 1px solid transparent;
   border-top: none;
   border-bottom: 1px solid #DDD;
-  box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px #FFF, 0 1px 0 #FFF;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, .39), 0 -1px 1px #FFF, 0 1px 0 #FFF;
   margin-bottom: 10px;
   padding-left: 5px;
 }
 
-input[type=submit]{
+input[type=submit] {
   border: none;
   font-weight: bold;
 }
 
 /* First form */
-
-.top-left-content input[type=text],
-.top-left-content input[type=submit]{
+.top-left-content input[type=text], .top-left-content input[type=submit] {
   height: 25px;
 }
 
-.top-left-content .two-column{
+.top-left-content .two-column {
   width: 195px;
 }
 
-.top-left-content .one-column{
+.top-left-content .one-column {
   width: 400px;
 }
 
-.top-left-content input[type=submit]{
+.top-left-content input[type=submit] {
   width: 410px;
   background-color: #FFD9B8;
 }
 
 /* Second form */
-
-.bottom-form input[type=text],
-.bottom-form input[type=submit]{
+.bottom-form input[type=text], .bottom-form input[type=submit] {
   height: 30px;
 }
 
-.bottom-form .two-column{
+.bottom-form .two-column {
   width: 420px;
 }
 
-.bottom-form .one-column{
+.bottom-form .one-column {
   width: 850px;
 }
 
-.bottom-form input[type=submit]{
+.bottom-form input[type=submit] {
   width: 860px;
   background-color: #FFB16F
 }
 
-
 /* Video styling */
-
-.middle-left-content{
+.middle-left-content {
   width: 600px;
   margin-top: 6%;
   margin-left: 5%;
 }
 
-#circle1,
-#circle2{
+#circle1, #circle2 {
   background-color: white;
   width: 250px;
   height: 250px;
@@ -183,31 +163,30 @@ input[type=submit]{
   padding-left: 20px;
 }
 
-#circle1{
+#circle1 {
   margin-top: 20%;
 }
 
 /* Video text styling */
-
-.middle-right-content{
+.middle-right-content {
   width: 500px;
   position: absolute;
   left: 55%;
   color: white;
 }
 
-.middle-right-content h3{
+.middle-right-content h3 {
   font-size: 40px;
   line-height: 1em;
   margin-bottom: 8px;
   font-weight: bold;
 }
 
-.middle-right-content p{
+.middle-right-content p {
   font-size: 16px;
 }
 
-.middle-left-content img{
+.middle-left-content img {
   width: 450px;
   position: absolute;
   left: 9%;
@@ -215,7 +194,7 @@ input[type=submit]{
 }
 
 /* Map styling */
-.map{
+.map {
   background-color: #F7F7F7;
   width: 700px;
   position: relative;
@@ -225,11 +204,11 @@ input[type=submit]{
   border-radius: 7.2px;
 }
 
-.map img{
+.map img {
   width: 600px;
 }
 
-.map h3{
+.map h3 {
   text-align: center;
   font-size: 30px;
   padding-top: 3%;
@@ -237,7 +216,7 @@ input[type=submit]{
   margin-bottom: 0px;
 }
 
-.map p{
+.map p {
   margin-left: 15%;
   font-size: 18px;
   font-weight: bold;
@@ -246,12 +225,16 @@ input[type=submit]{
   margin-top: 0px;
 }
 
-.tour-dates{
+.tour-dates {
   text-align: left;
   font-size: 18px;
 }
 
-.tour-dates .cta{
+.tour-dates .middle-column {
+  width: 15%;
+}
+
+.tour-dates .cta {
   background-color: #FFB16F;
   color: white;
   border-radius: 8px;
@@ -259,57 +242,54 @@ input[type=submit]{
 }
 
 /* Van styling */
-
 .van {
   margin-top: 47px;
   margin-left: 550px;
 }
 
-.van img{
+.van img {
   width: 600px;
 }
 
 /* Tile intro */
-
-.tile-intro{
+.tile-intro {
   width: 875px;
   position: relative;
   color: white;
 }
 
-.tile-intro h3{
+.tile-intro h3 {
   font-size: 30px;
   margin-bottom: 0px;
 }
 
-.tile-intro p{
+.tile-intro p {
   margin-top: 5px;
 }
 
 /* Product tiles */
-
-.tiles{
+.tiles {
   position: relative;
   width: 913px;
   margin-top: 3%;
 }
 
-.tiles h4{
+.tiles h4 {
   margin-bottom: 0px;
   color: #2B2B2B
 }
 
-.tiles p{
+.tiles p {
   margin-top: 5px;
   color: #2B2B2B
 }
 
-.tiles .cta{
+.tiles .cta {
   color: #FF7500;
   font-weight: bold;
 }
 
-.tile{
+.tile {
   width: 190px;
   height: 300px;
   background-color: #f7f7f7;
@@ -319,101 +299,229 @@ input[type=submit]{
   padding-right: 10px;
 }
 
-.tile img{
+.tile img {
   height: 112px;
 }
 
 /* Bottom form text*/
-
-.bottom-form{
+.bottom-form {
   width: 875px;
   margin-top: 40%;
   margin-bottom: 5%;
 }
 
-.bottom-form h3{
+.bottom-form h3 {
   font-size: 42px;
   margin-bottom: 0px;
   color: #2B2B2B;
 }
 
-.bottom-form p{
+.bottom-form p {
   margin-top: 5px;
   color: #2B2B2B;
 }
 
-@media only screen and (max-width: 480px){
+@media only screen and (max-width: 480px) {
+/* Background */
 
-  /* Background */
-  .orangebg,
-  .orangebg-2{
-    height: 400px;
-  }
+.orangebg, .orangebg-2 {
+  height: 400px;
+}
 
-  .orangebg{
-    margin-top: 20%;
-  }
+.orangebg {
+  top: 370px;
+}
 
-  /* Popular styles */
-  .container{
-    width: 480px;
-  }
+.orangebg-2 {
+  top: 1460px;
+}
 
-  /* Navigation */
+/* Popular styles */
+.container {
+  width: 480px;
+}
 
-  .nav .float-left{
-    padding-left: 20px;
-  }
+/* Navigation */
+.nav .float-left {
+  padding-left: 20px;
+}
 
-  .nav{
-    height: 30px;
-    color: #FF7500;
-    font-size: 16px;
-    margin-top: 20px;
-    font-weight: bold;
-    align-items: right;
-    margin-left: 20%;
-  }
+.nav {
+  height: 30px;
+  color: #FF7500;
+  font-size: 16px;
+  margin-top: 20px;
+  font-weight: bold;
+  align-items: right;
+  margin-left: 20%;
+}
 
-  /* Intro section */
+/* Intro section */
+.top-right-content img {
+  content: url('https://ryanleys.com/igus-tests/tts/img/box_small.png');
+  width: 270px;
+  margin-top: -30px;
+  z-index: 1;
+}
 
-  .top-right-content img{
-    content: url('https://ryanleys.com/igus-tests/tts/img/box_small.png');
-    width: 270px;
-    margin-top: -30px;
-    z-index: 1;
-  }
+.top-right-content {
+  z-index: 1;
+}
 
-  .top-right-content{
-    z-index: 1;
-  }
+.top-left-content {
+  width: 344px;
+  position: relative;
+  z-index: 99;
+  margin-left: 1%;
+}
 
-  .top-left-content{
-    width: 344px;
-    position: relative;
-    z-index: 99;
-    margin-left: 1%;
-  }
+/* Styling forms */
+/* First form */
+.top-left-content input[type=text], .top-left-content input[type=submit] {
+  height: 25px;
+}
 
-  /* Styling forms */
+.top-left-content .two-column {
+  width: 430px;
+}
 
-  /* First form */
+.top-left-content .one-column {
+  width: 430px;
+}
 
-  .top-left-content input[type=text],
-  .top-left-content input[type=submit]{
-    height: 25px;
-  }
+.top-left-content input[type=submit] {
+  width: 440px;
+  background-color: #FFD9B8;
+}
 
-  .top-left-content .two-column{
-    width: 430px;
-  }
+/* Second form */
+.bottom-form .one-column {
+  width: 420px;
+}
 
-  .top-left-content .one-column{
-    width: 430px;
-  }
+.bottom-form input[type=submit] {
+  width: 430px;
+}
 
-  .top-left-content input[type=submit]{
-    width: 440px;
-    background-color: #FFD9B8;
-  }
+/* Video styling */
+.middle-left-content {
+  width: 480px;
+  margin-top: 20%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.middle-left-content img {
+  width: 375px;
+  position: absolute;
+  left: 9%;
+  margin-top: 4%;
+}
+
+.middle-right-content .float-left {
+  float: none;
+}
+
+#circle1, #circle2 {
+  background-color: #ff7500;
+  width: 200px;
+  height: 200px;
+  padding-left: 20px;
+}
+
+#circle1 {
+  margin-top: 13%;
+}
+
+#circle2 {
+  margin-top: -1%;
+}
+
+/* Video text styling */
+.middle-right-content {
+  width: 420px;
+  left: 2%;
+  position: relative;
+  color: #2B2B2B;
+  margin-top: 79%;
+}
+
+/* Van styling */
+.van {
+  margin-top: -610px;
+  margin-left: 140px;
+}
+
+.van img {
+  width: 300px;
+}
+
+/* Map styling */
+.map {
+  width: 400px;
+  height: 470px;
+  margin-top: 35%;
+  margin-left: 20px;
+}
+
+.map img {
+  width: 350px;
+}
+
+.map h3 {
+  font-size: 20px;
+}
+
+.map p {
+  margin-left: 21%;
+}
+
+.tour-dates {
+  font-size: 14px;
+}
+
+.tour-dates .middle-column {
+  width: 5%;
+}
+
+  /* Tile intro */
+.tile-intro {
+  width: 400px;
+  color: #2B2B2B;
+  margin-left: 2%;
+  margin-top: 110%;
+}
+
+/* Product tiles */
+.tiles {
+  width: 480px;
+  margin-left: 0%;
+}
+
+.tile {
+  background-color: #FFB16F;
+}
+
+.iglide, .drylin {
+  margin-top: 10px;
+}
+
+  /* Bottom form */
+.bottom-form {
+  width: 420px;
+  margin-top: 135%;
+  margin-bottom: 5%;
+  margin-left: 2%;
+}
+
+.bottom-form h3 {
+  font-size: 30px;
+  margin-bottom: 0px;
+  color: #2B2B2B;
+}
+
+.bottom-form p {
+  margin-top: 5px;
+  color: #2B2B2B;
+}
 }
