--- a/tts.css
+++ b/tts.css
@@ -321,15 +321,257 @@ input[type=submit] {
   color: #2B2B2B;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 375px){
   body{
     overflow-x: hidden;
+    width: 100%;
+    max-width: 375px;
+    margin-left: 0px;
   }
-  
+
+  /* Background */
+  .orangebg, .orangebg-2 {
+    height: 400px;
+    width: 100%;
+  }
+  .orangebg {
+    top: 370px;
+  }
+  .orangebg-2 {
+    top: 1540px;
+  }
+
+  /* Popular styles */
+  .container {
+    width: 100%;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  /* Navigation */
+  .nav .float-left {
+    padding-left: 20px;
+  }
+
+  .nav {
+    height: 30px;
+    color: #FF7500;
+    font-size: 16px;
+    margin-top: 20px;
+    font-weight: bold;
+    align-items: right;
+    margin-left: 20%;
+    opacity: 0;
+  }
+
+  /* Intro section */
+  .top-right-content img {
+    width: 570px;
+    margin-top: -30px;
+    z-index: 1;
+    overflow-x: hidden;
+    display: none;
+  }
+
+  .top-right-content {
+    z-index: 1;
+  }
+
+  .top-left-content {
+    width: calc(100% - 10px);
+    position: relative;
+    z-index: 99;
+    margin-left: 8px;
+  }
+
+  /* Styling forms */
+  /* First form */
+  .top-left-content input[type=text], .top-left-content input[type=submit] {
+    height: 25px;
+  }
+
+  .top-left-content .two-column {
+    width: calc(100% - 20px);
+  }
+
+  .top-left-content .one-column {
+    width: calc(100% - 20px);
+  }
+
+  .top-left-content input[type=submit] {
+    width: 100%;
+    background-color: #FFD9B8;
+  }
+
+  .top-left-content br,
+  .bottom-form br{
+    display: block;
+    margin: 0px 0;
+  }
+
+  /* Second form */
+  .bottom-form .one-column {
+    width: calc(100% - 20px);
+  }
+  .bottom-form .two-column{
+    width: calc(100% - 20px);
+  }
+
+  .bottom-form input[type=submit] {
+    width: 100%;
+  }
+
+  /* Video styling */
+  .middle-left-content {
+    width: calc(100% - 10px);
+    margin-top: 20%;
+    margin-left: 8px;
+  }
+
+  .middle-left-content img {
+    width: calc(100vw - 75px);
+    position: absolute;
+    left: 9%;
+    margin-top: 4%;
+  }
+
+  .middle-right-content .float-left {
+    float: none;
+  }
+
+  #circle1, #circle2 {
+    background-color: #ff7500;
+    width: calc(100vw - 240px);
+    height: calc(100vw - 220px);
+    margin-left: 10px;
+  }
+
+  #circle1 {
+    margin-top: 13%;
+  }
+
+  #circle2 {
+    margin-top: -1%;
+  }
+
+  /* Video text styling */
+  .middle-right-content {
+    width: 330px;
+    left: 2%;
+    position: relative;
+    color: #2B2B2B;
+    margin-top: 86%;
+  }
+
+  /* Van styling */
+  .van {
+    margin-top: -610px;
+    margin-left: 40px;
+  }
+
+  .van img {
+    width: 300px;
+  }
+
+  /* Map styling */
+  .map {
+    width: 340px;
+    height: 470px;
+    margin-top: 45%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .map img {
+    width: 280px;
+  }
+
+  .map h3 {
+    font-size: 20px;
+  }
+
+  .map p {
+    margin-left: 21%;
+  }
+
+  .tour-dates {
+    font-size: 14px;
+  }
+
+  .tour-dates .middle-column {
+    width: 0%;
+  }
+
+    /* Tile intro */
+  .tile-intro {
+    width: 340px;
+    color: #2B2B2B;
+    margin-left: 8px;
+    margin-top: 145%;
+  }
+
+  /* Product tiles */
+  .tiles {
+    width: 355px;
+    margin-left: 6px;
+  }
+
+  .tile {
+    width: 145px;
+    height: 220px;
+    background-color: #FFB16F;
+  }
+
+  .tile img{
+    height: 80px;
+  }
+
+  .tile p{
+    font-size: 12px;
+    margin-bottom: 0px;
+  }
+
+  .tile h4{
+    font-size: 14px;
+    margin-top: 5px;
+  }
+
+  .iglide, .drylin {
+    margin-top: 10px;
+  }
+
+    /* Bottom form */
+  .bottom-form {
+    width: 320px;
+    margin-top: 135%;
+    margin-bottom: 5%;
+    margin-left: 8px;
+  }
+
+  .bottom-form h3 {
+    font-size: 30px;
+    margin-bottom: 0px;
+    color: #2B2B2B;
+  }
+
+  .bottom-form p {
+    margin-top: 5px;
+    color: #2B2B2B;
+  }
+
+}
+
+@media only screen and (min-width: 376px) and (max-width: 480px) {
+  body{
+    overflow-x: hidden;
+    width: 480px;
+  }
+
   /* Background */
 
   .orangebg, .orangebg-2 {
     height: 400px;
+    width: 480px;
   }
 
   .orangebg {
@@ -362,10 +604,11 @@ input[type=submit] {
 
   /* Intro section */
   .top-right-content img {
-    content: url('https://ryanleys.com/igus-tests/tts/img/box_small.png');
-    width: 270px;
+    width: 570px;
     margin-top: -30px;
     z-index: 1;
+    overflow-x: hidden;
+    display: none;
   }
 
   .top-right-content {
@@ -396,6 +639,12 @@ input[type=submit] {
   .top-left-content input[type=submit] {
     width: 440px;
     background-color: #FFD9B8;
+  }
+
+  .top-left-content br,
+  .bottom-form br{
+    display: block;
+    margin: 0px 0;
   }
 
   /* Second form */
@@ -558,9 +807,9 @@ input[type=submit] {
 
   /* Intro section */
   .top-right-content img {
-    content: url('https://ryanleys.com/igus-tests/tts/img/box_small.png');
-    width: 349px;
+    width: 700px;
     z-index: 1;
+    overflow-x: hidden;
   }
 
   .top-left-content{
@@ -603,6 +852,11 @@ input[type=submit] {
 
   .bottom-form input[type=submit] {
     width: 450px;
+  }
+
+  .bottom-form br{
+    display: block;
+    margin: 0px 0;
   }
 
   /* Video styling */
