--- a/tts.css
+++ b/tts.css
@@ -321,12 +321,113 @@ input[type=submit] {
   color: #2B2B2B;
 }
 
-@media only screen and (max-width: 375px){
+@media only screen and (max-width: 600px){
   body{
     overflow-x: hidden;
+  }
+
+  .top-right-content img{
+    z-index: 1;
+    overflow-x: hidden;
+  }
+
+  .top-left-content{
+    z-index: 2;
+    position: relative;
+  }
+
+  .bottom-form br{
+    display: block;
+    margin: 0px 0;
+  }
+
+  .middle-left-content img{
+    position: absolute;
+    margin-top: 4%;
+  }
+
+  #circle1, #circle2{
+    background-color: #ff7500;
+  }
+
+  #circle1{
+    margin-top: 13%;
+  }
+
+  #circle2{
+    margin-top: -1%;
+  }
+
+  .middle-right-content{
+    position: relative;
+    color: #2B2B2B
+  }
+
+  .van img {
+    width: 300px;
+  }
+
+  .map{
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .map h3 {
+    font-size: 20px;
+  }
+
+  .map p {
+    margin-left: 21%;
+  }
+
+  .tour-dates {
+    font-size: 14px;
+  }
+
+  .tile-intro{
+    color: #2B2B2B;
+  }
+
+  .tile{
+    background-color: #FFB16F;
+  }
+
+  .iglide, .drylin {
+    margin-top: 10px;
+  }
+
+  .bottom-form{
+    margin-bottom: 5%;
+  }
+
+  .bottom-form h3{
+    font-size: 30px;
+    margin-bottom: 0px;
+    color: #2B2B2B;
+  }
+
+  .bottom-form p {
+  margin-top: 5px;
+  color: #2B2B2B;
+  }
+}
+
+@media only screen and (max-width: 480px){
+
+}
+
+@media only screen and (max-width: 375px){
+  body{
     width: 100%;
     max-width: 375px;
     margin-left: 0px;
+  }
+
+  /* Popular styles */
+  .container {
+    width: 100%;
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
   /* Background */
@@ -341,55 +442,25 @@ input[type=submit] {
     top: 1540px;
   }
 
-  /* Popular styles */
-  .container {
-    width: 100%;
-    margin-left: 0px;
-    margin-right: 0px;
-  }
-
   /* Navigation */
-  .nav .float-left {
-    padding-left: 20px;
-  }
-
   .nav {
-    height: 30px;
-    color: #FF7500;
-    font-size: 16px;
-    margin-top: 20px;
-    font-weight: bold;
-    align-items: right;
-    margin-left: 20%;
     opacity: 0;
   }
 
   /* Intro section */
+  .top-left-content {
+    width: calc(100% - 10px);
+    margin-left: 8px;
+  }
+
   .top-right-content img {
     width: 570px;
     margin-top: -30px;
-    z-index: 1;
-    overflow-x: hidden;
     display: none;
-  }
-
-  .top-right-content {
-    z-index: 1;
-  }
-
-  .top-left-content {
-    width: calc(100% - 10px);
-    position: relative;
-    z-index: 99;
-    margin-left: 8px;
   }
 
   /* Styling forms */
   /* First form */
-  .top-left-content input[type=text], .top-left-content input[type=submit] {
-    height: 25px;
-  }
-
   .top-left-content .two-column {
     width: calc(100% - 20px);
   }
@@ -400,11 +471,9 @@ input[type=submit] {
 
   .top-left-content input[type=submit] {
     width: 100%;
-    background-color: #FFD9B8;
   }
 
-  .top-left-content br,
-  .bottom-form br{
+  .top-left-content br{
     display: block;
     margin: 0px 0;
   }
@@ -430,9 +499,7 @@ input[type=submit] {
 
   .middle-left-content img {
     width: calc(100vw - 75px);
-    position: absolute;
     left: 9%;
-    margin-top: 4%;
   }
 
   .middle-right-content .float-left {
@@ -440,62 +507,33 @@ input[type=submit] {
   }
 
   #circle1, #circle2 {
-    background-color: #ff7500;
     width: calc(100vw - 240px);
     height: calc(100vw - 220px);
     margin-left: 10px;
-  }
-
-  #circle1 {
-    margin-top: 13%;
-  }
-
-  #circle2 {
-    margin-top: -1%;
   }
 
   /* Video text styling */
   .middle-right-content {
     width: 330px;
     left: 2%;
-    position: relative;
-    color: #2B2B2B;
     margin-top: 86%;
   }
 
   /* Van styling */
   .van {
-    margin-top: -610px;
+    margin-top: -560px;
     margin-left: 40px;
-  }
-
-  .van img {
-    width: 300px;
   }
 
   /* Map styling */
   .map {
     width: 340px;
-    height: 470px;
+    height: 430px;
     margin-top: 45%;
-    margin-left: auto;
-    margin-right: auto;
   }
 
   .map img {
     width: 280px;
-  }
-
-  .map h3 {
-    font-size: 20px;
-  }
-
-  .map p {
-    margin-left: 21%;
-  }
-
-  .tour-dates {
-    font-size: 14px;
   }
 
   .tour-dates .middle-column {
@@ -505,7 +543,6 @@ input[type=submit] {
     /* Tile intro */
   .tile-intro {
     width: 340px;
-    color: #2B2B2B;
     margin-left: 8px;
     margin-top: 145%;
   }
@@ -519,7 +556,6 @@ input[type=submit] {
   .tile {
     width: 145px;
     height: 220px;
-    background-color: #FFB16F;
   }
 
   .tile img{
@@ -536,39 +572,23 @@ input[type=submit] {
     margin-top: 5px;
   }
 
-  .iglide, .drylin {
-    margin-top: 10px;
-  }
 
     /* Bottom form */
   .bottom-form {
     width: 320px;
     margin-top: 135%;
-    margin-bottom: 5%;
     margin-left: 8px;
-  }
-
-  .bottom-form h3 {
-    font-size: 30px;
-    margin-bottom: 0px;
-    color: #2B2B2B;
-  }
-
-  .bottom-form p {
-    margin-top: 5px;
-    color: #2B2B2B;
   }
 
 }
 
-@media only screen and (min-width: 376px) and (max-width: 480px) {
+@media only screen and (min-width: 376px) and (max-width: 495px) {
   body{
     overflow-x: hidden;
     width: 480px;
   }
 
   /* Background */
-
   .orangebg, .orangebg-2 {
     height: 400px;
     width: 480px;
@@ -600,6 +620,7 @@ input[type=submit] {
     font-weight: bold;
     align-items: right;
     margin-left: 20%;
+    opacity: 0;
   }
 
   /* Intro section */
@@ -624,36 +645,21 @@ input[type=submit] {
 
   /* Styling forms */
   /* First form */
-  .top-left-content input[type=text], .top-left-content input[type=submit] {
-    height: 25px;
-  }
-
+  .bottom-form .one-column,
+  .bottom-form .two-column,
+  .top-left-content .one-column,
   .top-left-content .two-column {
-    width: 430px;
+    width: calc(100vw - 50px);
   }
 
-  .top-left-content .one-column {
-    width: 430px;
+  .top-left-content input[type=submit],
+  .bottom-form input[type=submit] {
+    width: calc(100vw - 40px);
   }
 
-  .top-left-content input[type=submit] {
-    width: 440px;
-    background-color: #FFD9B8;
-  }
-
-  .top-left-content br,
-  .bottom-form br{
+  .top-left-content br{
     display: block;
     margin: 0px 0;
-  }
-
-  /* Second form */
-  .bottom-form .one-column {
-    width: 420px;
-  }
-
-  .bottom-form input[type=submit] {
-    width: 430px;
   }
 
   /* Video styling */
@@ -665,9 +671,9 @@ input[type=submit] {
   }
 
   .middle-left-content img {
-    width: 375px;
+    width: 80vw;
     position: absolute;
-    left: 9%;
+    left: 7vw;
     margin-top: 4%;
   }
 
@@ -677,9 +683,9 @@ input[type=submit] {
 
   #circle1, #circle2 {
     background-color: #ff7500;
-    width: 200px;
-    height: 200px;
-    padding-left: 20px;
+    width: 42vw;
+    height: 42vw;
+    padding-left: 5vw;
   }
 
   #circle1 {
@@ -692,17 +698,21 @@ input[type=submit] {
 
   /* Video text styling */
   .middle-right-content {
-    width: 420px;
+    width: calc(100vw - 10vw);
     left: 2%;
     position: relative;
     color: #2B2B2B;
     margin-top: 79%;
   }
 
+  .middle-right-content h3{
+    font-size: 34px;
+  }
+
   /* Van styling */
   .van {
     margin-top: -610px;
-    margin-left: 140px;
+    margin-left: 20vw;
   }
 
   .van img {
@@ -711,10 +721,10 @@ input[type=submit] {
 
   /* Map styling */
   .map {
-    width: 400px;
+    width: 90vw;
     height: 470px;
     margin-top: 35%;
-    margin-left: 20px;
+    margin-left: 1vw;
   }
 
   .map img {
@@ -739,7 +749,7 @@ input[type=submit] {
 
     /* Tile intro */
   .tile-intro {
-    width: 400px;
+    width: calc(100vw - 10vw);
     color: #2B2B2B;
     margin-left: 2%;
     margin-top: 110%;
@@ -751,7 +761,12 @@ input[type=submit] {
     margin-left: 0%;
   }
 
+  .tiles h4{
+    margin-top: 5px;
+  }
+
   .tile {
+    width: calc(100vw - 60vw);
     background-color: #FFB16F;
   }
 
@@ -761,7 +776,7 @@ input[type=submit] {
 
     /* Bottom form */
   .bottom-form {
-    width: 420px;
+    width: calc(100vw - 10vw);
     margin-top: 135%;
     margin-bottom: 5%;
     margin-left: 2%;
@@ -779,12 +794,8 @@ input[type=submit] {
   }
 }
 
-@media only screen and (min-width:481px) and (max-width: 600px) {
+@media only screen and (min-width:496px) and (max-width: 600px) {
   /* Background */
-  body{
-    overflow-x: hidden;
-  }
-
   .orangebg, .orangebg-2 {
     height: 280px;
   }
@@ -798,7 +809,8 @@ input[type=submit] {
   }
 
   .container{
-    width: 440px;
+    width: 100vw;
+    overflow-x: hidden;
   }
 
   .nav{
@@ -808,15 +820,11 @@ input[type=submit] {
   /* Intro section */
   .top-right-content img {
     width: 700px;
-    z-index: 1;
-    overflow-x: hidden;
   }
 
   .top-left-content{
-    position: relative;
-    z-index: 2;
     width: 360px;
-    margin-left: 0%;
+    margin-left: 2vw;
     top: -20px
   }
 
@@ -828,6 +836,7 @@ input[type=submit] {
     width: 344px;
   }
 
+  /* Styling forms */
   /* First form */
   .top-left-content .two-column {
     width: 165px;
@@ -854,25 +863,17 @@ input[type=submit] {
     width: 450px;
   }
 
-  .bottom-form br{
-    display: block;
-    margin: 0px 0;
-  }
-
   /* Video styling */
   .middle-left-content {
-    width: 440px;
-    margin-top: 13%;
+    width: 80vw;
+    margin-top: 12vw;
     margin-left: auto;
     margin-right: auto;
   }
 
   .middle-left-content img {
-    width: 375px;
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 4%;
+    width: 70vw;
+    margin-left: 6vw;
   }
 
   .middle-right-content .float-left {
@@ -880,18 +881,8 @@ input[type=submit] {
   }
 
   #circle1, #circle2 {
-    background-color: #ff7500;
-    width: 200px;
-    height: 200px;
-    padding-left: 20px;
-  }
-
-  #circle1 {
-    margin-top: 13%;
-  }
-
-  #circle2 {
-    margin-top: -1%;
+    width: 35vw;
+    height: 35vw;
   }
 
   /* Video text styling */
@@ -911,77 +902,41 @@ input[type=submit] {
     margin-left: 150px;
   }
 
-  .van img {
-    width: 300px;
-  }
-
   /* Map styling */
   .map {
     width: 400px;
     height: 470px;
     margin-top: 150px;
-    margin-left: auto;
-    margin-right: auto;
   }
 
   .map img {
     width: 350px;
   }
 
-  .map h3 {
-    font-size: 20px;
-  }
-
-  .map p {
-    margin-left: 21%;
-  }
-
-  .tour-dates {
-    font-size: 14px;
-  }
-
   .tour-dates .middle-column {
     width: 5%;
   }
+
   /* Tile intro */
-.tile-intro {
+  .tile-intro {
+    width: 440px;
+    margin-left: 2%;
+    margin-top: 0%;
+  }
+
+  /* Product tiles */
+  .tiles {
+    width: 440px;
+    top: 20px
+  }
+
+  /* Bottom form */
+  .bottom-form {
   width: 440px;
-  color: #2B2B2B;
-  margin-left: 2%;
-  margin-top: 0%;
-}
+  margin-top: 670px;
+  }
 
-/* Product tiles */
-.tiles {
-  width: 440px;
-  top: 20px
-}
 
-.tile {
-  background-color: #FFB16F;
-}
-
-.iglide, .drylin {
-  margin-top: 10px;
-}
-
-/* Bottom form */
-.bottom-form {
-width: 440px;
-margin-top: 670px;
-margin-bottom: 5%;
-}
-
-.bottom-form h3 {
-font-size: 30px;
-margin-bottom: 0px;
-color: #2B2B2B;
-}
-
-.bottom-form p {
-margin-top: 5px;
-color: #2B2B2B;
-}
 
 
 }
